@@ -27,7 +27,6 @@ prefix = profiles/github
 -relationship = requires
 Dist::Zilla::Plugin::Git::NextVersion = 0
 Dist::Zilla::Plugin::PromptIfStale = 0
-Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::AutoMetaResources = 0
 Dist::Zilla::Plugin::Authority = 0
 Dist::Zilla::Plugin::MetaNoIndex = 0
@@ -81,7 +80,6 @@ Dist::Zilla::Plugin::UploadToCPAN = 0
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::Tag = 0
 Dist::Zilla::Plugin::Git::Push = 0
-Dist::Zilla::Plugin::GitHub::Update = 0
 Dist::Zilla::Plugin::InstallRelease = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
 ; FIXME: [PodWeaver] needs to inject plugin and section prereqs
@@ -100,11 +98,13 @@ Test::Spelling = 0.19
 Test::Vars = 0.004
 CPAN::Changes = 0.23
 
-[Prereqs / PluginBundle (indirect, optional)]
+[Prereqs / PluginBundle (direct, optional)]
 -phase = runtime
 -relationship = recommends
 Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::ModuleBuildTiny = 0.004
+Dist::Zilla::Plugin::GithubMeta = 0
+Dist::Zilla::Plugin::GitHub::Update = 0
 
 [Prereqs / MintingProfile]
 ; TODO: these should be added
